# clipboard_for_linux

./: CMakeLists.txt  CopyCATWindow.cpp  CopyCATWindow.h  LICENSE  README.md  main.cpp  worker.cpp  worker.h
Clipboard.c/: CMakeLists.txt
CopyCAT/: CMakeLists.txt  main.cpp
DesignCopyCAT/: CopyCAT.ui
Modules/ApplicationConfigs/: Configs.cpp  Configs.h
Modules/Data/: Data.cpp  Data.h
Modules/History/: History.cpp  History.h
